convert Aimedis to AIS ticket --- jira = 573

--- a/src/Screens/hospital_Admin/translations/de.json
+++ b/src/Screens/hospital_Admin/translations/de.json
@@ -4,7 +4,7 @@
 		"srvc_Nurses": "Krankenschwestern",
 		"For_the_purposes_these": "For the purposes of these Terms and Conditions:",
 		"terms_Application": "Application",
-		"means_the_software_program_provided": "means the software program provided by the Company downloaded by You on any electronic device, named Aimedis",
+		"means_the_software_program_provided": "means the software program provided by the Company downloaded by You on any electronic device, named AIS",
 		"Application_Store": "Application Store",
 		"means_the_digital_distribution_service": "means the digital distribution service operated and developed by Apple Inc. (Apple App Store) or Google Inc. (Google Play Store) in which the Application has been downloaded.",
 		"terms_Affiliate": "Affiliate",
@@ -12,7 +12,7 @@
 		"terms_Account": "Account",
 		"means_unique_account_created": "means a unique account created for You to access our Service or parts of our Service.",
 		"terms_Company": "Company",
-		"referred_to_as_either": "(referred to as either “the Company”, “We”, “Us” or “Our” in this Agreement) refers to Aimedis B.V., Sint Michaelstraat 4, 5935 BL Steyl, Netherlands.",
+		"referred_to_as_either": "(referred to as either “the Company”, “We”, “Us” or “Our” in this Agreement) refers to AIS B.V., Sint Michaelstraat 4, 5935 BL Steyl, Netherlands.",
 		"terms_Content": "Content",
 		"refers_to_content_such": "refers to content such as text, images, or other information that can be posted, uploaded, linked to or otherwise made available by You, regardless of the form of that content.",
 		"terms_Country": "Land",
@@ -40,7 +40,7 @@
 		"Third_party_Social": "Third-party Social Media Service",
 		"meansany_services_or_content": "means any services or content (including data, information, products or services) provided by a third-party that may be displayed, included or made available by the Service.",
 		"terms_Website": "Website",
-		"refers_Aimedis_accessible": "refers to Aimedis, accessible from https://www.aimedis.io",
+		"refers_Aimedis_accessible": "refers to AIS, accessible from https://www.aimedis.io",
 		"terms_You": "You",
 		"means_the_individual_accessing": "means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.",
 		"terms_Acknowledgement": "Acknowledgement",
@@ -72,7 +72,7 @@
 		"after_delivery_according": "The supply of Goods which are, after delivery, according to their nature, inseparably mixed with other items.",
 		"digital_content_which_supplied": "The supply of digital content which is not supplied on a tangible medium if the performance has begun with Your prior express consent and You have acknowledged Your loss of cancellation right.",
 		"Policy_page_content": "Policy page content",
-		"AIMEDIS_Privacy_Policy": "AIMEDIS Privacy Policy",
+		"AIMEDIS_Privacy_Policy": "AIS Privacy Policy",
 		"Last_updated_May31": "Last updated: May 31, 2020",
 		"Privacy_Policy_describes": "This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.",
 		"Your_Personal_data_provide": "We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.",
@@ -85,13 +85,13 @@
 		"means_the_individual_accessing_the": "means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable. Under GDPR (General Data Protection Regulation), You can be referred to as the Data Subject or as the User as you are the individual using the Service.",
 		"Policy_Company": "Company",
 		"Policy_Application": "Application",
-		"means_the_software_program": "means the software program provided by the Company downloaded by You on any electronic device, named Aimedis",
+		"means_the_software_program": "means the software program provided by the Company downloaded by You on any electronic device, named AIS",
 		"Policy_Affiliate": "Affiliate",
 		"an_entity_that_controls": "means an entity that controls, is controlled by or is under common control with a party, where “control” means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.",
 		"Policy_Account": "Account",
 		"means_unique_ac_created": "means a unique account created for You to access our Service or parts of our Service.",
 		"Policy_Website": "Website",
-		"refers_Aimedis_acces": "refers to Aimedis, accessible from https://www.aimedis.io",
+		"refers_Aimedis_acces": "refers to AIS, accessible from https://www.aimedis.io",
 		"Policy_Service": "Service",
 		"refers_to_the_App": "refers to the Application or the Website or both.",
 		"Country_refers_Net": "Country refers to: Netherlands",
@@ -100,7 +100,7 @@
 		"Social_Media_Service": "Third-party Social Media Service",
 		"refers_any_website_any": "refers to any website or any social network website through which a User can log in or create an account to use the Service.",
 		"Facebook_Fan_Page": "Facebook Fan Page",
-		"public_profile_named": "is a public profile named Aimedis Facebook page specifically created by the Company on the Facebook social network, accessible from https://www.facebook.com/aimedisglobal",
+		"public_profile_named": "is a public profile named AIS Facebook page specifically created by the Company on the Facebook social network, accessible from https://www.facebook.com/aimedisglobal",
 		"Personal_Data": "Personal Data",
 		"information_that_relates": "is any information that relates to an identified or identifiable individual. For the purposes for GDPR, Personal Data means any information relating to You such as a name, an identification number, location data, online identifier or to one or more factors specific to the physical, physiological, genetic, mental, economic, cultural or social identity. For the purposes of the CCPA, Personal Data means any information that identifies, relates to, describes or is capable of being associated with, or could reasonably be linked, directly or indirectly, with You.",
 		"public_Cookies": "Cookies",
@@ -119,7 +119,7 @@
 		"Policy_Sale": "Sale",
 		"California_Consumer_Privacy_Act": "for the purpose of the CCPA (California Consumer Privacy Act), means selling, renting, releasing, disclosing, disseminating, making available, transferring, or otherwise communicating orally, in writing, or by electronic or other means, a Consumer’s Personal information to another business or a third party for monetary or other valuable consideration.",
 		"AIMEDIS_Imprint_content": "Imprint content",
-		"AIMEDIS_Imprint": "AIMEDIS Impressum",
+		"AIMEDIS_Imprint": "AIS Impressum",
 		"imprint_Representation": "Geschäftsführung",
 		"Represented_managing_directors": "Vertreten durch die Geschäftsführer Michael J. Kaldasch, MD (CEO) und Ben O. El Idrissi, MD (COO)",
 		"imprint_Email": "E-Mail",
@@ -131,15 +131,15 @@
 		"VAT_identification_number": "VAT ID: NL858194478B01",
 		"Service_provider": "Dienstleister",
 		"Service_provider_online": "Dienstanbieter dieses Online-Angebots und verantwortlich für den Inhalt dieser Website:",
-		"Aimedis_BV_add": "Aimedis B.V., Sint Michaelstraat 4, 5935 BL Steyl, Netherlands",
+		"Aimedis_BV_add": "AIS B.V., Sint Michaelstraat 4, 5935 BL Steyl, Netherlands",
 		"Editorial_responsible": "Redaktionell verantwortlich für den Inhalt",
-		"responsible_for_the_editorial": "Aimedis B.V. ist verantwortlich für das Editorial und den Inhalt. Weitere Informationen zur Nutzung der Aimedis-Plattform finden Sie in unseren Allgemeinen Geschäftsbedingungen und Datenschutzbestimmungen. Die Datenschutzrichtlinien beschreiben den Umgang mit personenbezogenen Daten.",
+		"responsible_for_the_editorial": "AIS B.V. ist verantwortlich für das Editorial und den Inhalt. Weitere Informationen zur Nutzung der AIS-Plattform finden Sie in unseren Allgemeinen Geschäftsbedingungen und Datenschutzbestimmungen. Die Datenschutzrichtlinien beschreiben den Umgang mit personenbezogenen Daten.",
 		"Dispute_settlement": "Streitbeilegung",
-		"EU_Commission_has_set_up": "Die EU-Kommission hat eine Website zur Online-Streitbeilegung zwischen Unternehmern und Verbrauchern eingerichtet, die Sie unter http://ec.europa.eu/consumers/odr/reach finden. Aimedis B.V. ist weder bereit noch verpflichtet, an einem Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.",
+		"EU_Commission_has_set_up": "Die EU-Kommission hat eine Website zur Online-Streitbeilegung zwischen Unternehmern und Verbrauchern eingerichtet, die Sie unter http://ec.europa.eu/consumers/odr/reach finden. AIS B.V. ist weder bereit noch verpflichtet, an einem Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.",
 		"returnrefund_content": "return refund content",
-		"AIMEDIS_Return_Refund": "AIMEDIS Return & Refund Policy",
+		"AIMEDIS_Return_Refund": "AIS Return & Refund Policy",
 		"returnRefund_Last_updated": "Last updated: May 31, 2020",
-		"Thank_you_for_shopping": "Thank you for shopping at Aimedis website and Aimedis app, operated by Aimedis B.V..",
+		"Thank_you_for_shopping": "Thank you for shopping at AIS website and AIS app, operated by AIS B.V..",
 		"for_any_reason_completely": "If, for any reason, You are not completely satisfied with a purchase We invite You to review our policy on refunds and returns.",
 		"following_terms_applicable": "The following terms are applicable for any products that You purchased with Us.",
 		"Inter_and_Definitions": "Interpretation and Definitions",
@@ -151,13 +151,13 @@
 		"refund_You": "You",
 		"means_individual_accessing": "means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.",
 		"refund_Company": "Company",
-		"ferred_to_as_either": "(referred to as either “the Company”, “We”, “Us” or “Our” in this Agreement) refers to Aimedis B.V., Sint Michaelstraat 4, 5935 BL Steyl, Netherlands.",
+		"ferred_to_as_either": "(referred to as either “the Company”, “We”, “Us” or “Our” in this Agreement) refers to AIS B.V., Sint Michaelstraat 4, 5935 BL Steyl, Netherlands.",
 		"refund_Service": "Service",
 		"refers_the_Application": "refers to the Application or the Website or both.",
 		"refund_Application": "Application",
-		"means_software_program": "means the software program provided by the Company downloaded by You on any electronic device, named Aimedis",
+		"means_software_program": "means the software program provided by the Company downloaded by You on any electronic device, named AIS",
 		"refund_Website": "Website",
-		"to_Aimedis_access": "refers to Aimedis, accessible from https://www.aimedis.io",
+		"to_Aimedis_access": "refers to AIS, accessible from https://www.aimedis.io",
 		"refund_Goods": "Goods",
 		"the_items_offered": "refer to the items offered for sale on the Service.",
 		"refund_Orders": "Orders",
@@ -196,7 +196,7 @@
 		"marked_gift_when": "If the Goods weren”t marked as a gift when purchased, or the gift giver had the Order shipped to themselves to give it to You later, We will send the refund to the gift giver.",
 		"refund_Contact_us": "Contact us",
 		"questions_about_our": "If you have any questions about our Returns and Refunds Policy, please contact us:",
-		"AIMEDIS_Disclaimer": "AIMEDIS Disclaimer page content",
+		"AIMEDIS_Disclaimer": "AIS Disclaimer page content",
 		"claim_Last_updated": "Last updated: May 31, 2020",
 		"pretation_Definitions": "Interpretation and Definitions",
 		"claim_Interpretation": "Interpretation",
@@ -207,13 +207,13 @@
 		"claim_You": "You",
 		"individual_accessing_using": "means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.",
 		"claim_Company": "Company",
-		"refers_Aimedis_BV_Sint": "(referred to as either “the Company”, “We”, “Us” or “Our” in this Agreement) refers to Aimedis B.V., Sint Michaelstraat 4, 5935 BL Steyl, Netherlands.",
+		"refers_Aimedis_BV_Sint": "(referred to as either “the Company”, “We”, “Us” or “Our” in this Agreement) refers to AIS B.V., Sint Michaelstraat 4, 5935 BL Steyl, Netherlands.",
 		"claim_Service": "Service",
 		"App_the_Website": "refers to the Application or the Website or both.",
 		"claim_Application": "Application",
-		"means_software_program_provide": "means the software program provided by the Company downloaded by You on any electronic device, named Aimedis",
+		"means_software_program_provide": "means the software program provided by the Company downloaded by You on any electronic device, named AIS",
 		"claim_Website": "Website",
-		"aimedis_accessible_from": "refers to Aimedis, accessible from https://www.aimedis.io",
+		"aimedis_accessible_from": "refers to AIS, accessible from https://www.aimedis.io",
 		"claim_Disclaimer": "Disclaimer",
 		"The_information_contained": "The information contained on the Service is for general information purposes only.",
 		"The_Company_assumes": "The Company assumes no responsibility for errors or omissions in the contents of the Service.",
@@ -295,7 +295,7 @@
 		"Register_Mobilenumber": "Mobilfunknummer",
 		"Register_activate_auth": "2 Faktor Authentifizierung aktivieren",
 		"Register_Accounttype": "Account Art",
-		"Register_want_register": "Ich möchte mich für den Aimedis-Gesundheitsnewsletter registrieren (optional).",
+		"Register_want_register": "Ich möchte mich für den AIS-Gesundheitsnewsletter registrieren (optional).",
 		"Register_Clicking_box": "Durch Klicken auf das Kästchen stimme ich den Nutzungsbedingungen zu und akzeptiere die Datenerfassung, Datenverarbeitung und die Verwendung meiner persönlichen Daten. Mehr in unserer Datenschutzerklärung.",
 		"Register_clickingbox": "Durch Klicken auf das Kästchen bestätige ich, dass ich eine medizinische Fachkraft bin. Ich muss einen Nachweis meiner Lizenz (z.B. Approbation) vorlegen, den ich jetzt hochlade oder später vorlege. Bevor ich diesen Nachweis nicht erbringe, kann ich mich nicht mit Patienten verbinden.",
 		"Register_CREATE": "ACCOUNT ANLEGEN",
@@ -307,7 +307,7 @@
 		"Register_number": "1 Nummer",
 		"Register_special": "1 Sonderzeichen",
 		"recruitmentemp_content": "recruitment employees",
-		"Aimedis_Staff_Reg": "Aimedis Staff Registrierung",
+		"Aimedis_Staff_Reg": "AIS Staff Registrierung",
 		"YOUR_CONTACT_INFO": "IHRE KONTAKTDATEN",
 		"recEmp_Emailaddress": "E-Mail Adresse",
 		"recEmp_FirstName": "Vorname(n)",
@@ -320,21 +320,21 @@
 		"recEmp_Empty_chec": "AGB & Dateschutz nicht bestätigt",
 		"Clicking_the_box": "Durch Klicken auf das Kästchen stimme ich unseren Nutzungsbedingungen zu und akzeptiere die Datenerfassung, Datenverarbeitung und die Verwendung meiner persönlichen Daten. Mehr in unserer Datenschutzerklärung.",
 		"Contact_permission": "Erlaubnis zur Kontaktaufnahme",
-		"Please_select_all": "Bitte wählen Sie, wie Sie von Aimedis kontaktiert werden möchten.",
+		"Please_select_all": "Bitte wählen Sie, wie Sie von AIS kontaktiert werden möchten.",
 		"recEmp_Email": "E-Mail",
 		"recEmp_DirectMail": "Direkte Nachricht",
 		"You_can_unsubscribe": "Sie können sich jederzeit abmelden, indem Sie auf den Link in der Fußzeile unserer E-Mails klicken. Informationen zu unserem Datenschutz finden Sie auf unserer Website.",
 		"We_use_Mailchimp": "Wir verwenden Mailchimp als unsere Marketingplattform. Wenn Sie unten klicken, um sich anzumelden, bestätigen Sie, dass Ihre Daten zur Verarbeitung an Mailchimp übertragen werden.",
 		"more_about_Mailchimp": "Erfahren Sie hier mehr über den Datenschutz von Mailchimp.",
 		"recEmp_SUBSCRIBE": "ANMELDEN",
-		"Aimedis_Staff_Recruitment": "Aimedis Staff Recruitment",
+		"Aimedis_Staff_Recruitment": "AIS Staff Recruitment",
 		"Staff_CONTACT_INFO": "IHRE KONTAKTDATEN",
 		"Staff_Company": "Firma",
 		"Staff_INDUSTRY": "IHR BEDARF",
 		"Staff_Indu": "Branche",
 		"Staff_needs": "Personalbedarf",
 		"Staff_addstaff": "+ add staff",
-		"want_to_register": "Ich möchte mich für den Aimedis-Gesundheitsnewsletter registrieren (optional).",
+		"want_to_register": "Ich möchte mich für den AIS-Gesundheitsnewsletter registrieren (optional).",
 		"I_agree_to_our": "Durch Klicken auf das Kästchen stimme ich unseren Nutzungsbedingungen zu und akzeptiere die Datenerfassung, Datenverarbeitung und die Verwendung meiner persönlichen Daten. Mehr in unserer Datenschutzerklärung.",
 		"Staff_SENDREC": "ABSENDEN",
 		"Nurse": "Krankenpfleger",
@@ -447,7 +447,7 @@
 		"plz_upload_png_jpg": "Bitte laden Sie PDF-, PNG- und JPEG-Dateien hoch",
 		"Messages": "Mitteilungen",
 		"PurchasedCourses": "Gekaufte Kurse",
-		"WelcometotheAimedis": "Willkommen beim Aimedis Admin",
+		"WelcometotheAimedis": "Willkommen beim AIS Admin",
 		"VideoandChatsystem": "Video- und Chat-System",
 		"Entermessage": "Nachricht eingeben",
 		"Search": "Suche",
@@ -483,7 +483,7 @@
 		"For_the_purpose_the_ccpa": "bezeichnet im Sinne des CCPA (California Consumer Privacy Act) eine natürliche Person, die in Kalifornien ansässig ist. Ein Einwohner im Sinne des Gesetzes umfasst (1) jede Person, die sich zu einem anderen als einem vorübergehenden oder vorübergehenden Zweck in den USA aufhält, und (2) jede Person mit Wohnsitz in den USA, die sich vorübergehend oder vorübergehend außerhalb der USA befindet vorübergehender Zweck.",
 		"purposes_this_Disclaimer": "Kwa madhumuni ya hii Haftungsausschluss:",
 		"two_fac_auth": "2 Faktorauthentifizierung",
-		"Log_into_Aimedis": "Melden Sie sich bei Aimedis V2 an",
+		"Log_into_Aimedis": "Melden Sie sich bei AIS V2 an",
 		"forget_pass": "Passwort vergessen",
 		"profile": "Profil",
 		"information": "Information",
@@ -559,7 +559,7 @@
 		"serch_by_name_id": "Suche nach Name oder ID",
 		"add_to_trusted_doc": "Zu vertrauenswürdigen Ärzten hinzufügen",
 		"recmonded_doc": "Empfohlene Ärzte",
-		"doc_who_part_of_aimedis": "Ärzte, die Teil der Aimedis-Plattform sind.",
+		"doc_who_part_of_aimedis": "Ärzte, die Teil der AIS-Plattform sind.",
 		"free_text": "Freier Text",
 		"format_updated": "Das Format wird aktualisiert",
 		"blockchain_secure_organ_donar_Pass": "Blockchain gesicherter Organspenderpass",
@@ -591,7 +591,7 @@
 		"updated_success": "Erfolgreich geupdated",
 		"file_uploaded": "Datei wurde erfolgreich hochgeladen",
 		"upload_id_card": "Laden Sie ein Foto Ihres Personalausweises hoch",
-		"by_clicking_accept_aimedis_term": "Wenn Sie darauf klicken, akzeptieren Sie die Aimeidis-Bedingungen und deren Datenschutzbestimmungen",
+		"by_clicking_accept_aimedis_term": "Wenn Sie darauf klicken, akzeptieren Sie die AIS-Bedingungen und deren Datenschutzbestimmungen",
 		"attached_doc": "Anhang",
 		"u_r_nvr_obligate_to_upload_doc": "Sie sind niemals verpflichtet, Ihre Lizenz oder einen anderen Ausweisnachweis hochzuladen.",
 		"in_critical_enviroment_id": "In der kritischen Umgebung erleichtert dies die eindeutige Identifizierung und den Vergleich mit den vorhandenen Daten zur Körperpflege erheblich. Auch der Abzug von Gesundheitsdiensten bei Ihrer Pharma- / Forschungs- / Versicherungsgesellschaft ist auf diese Weise viel einfacher.",
