--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -12,7 +12,7 @@
 		"Register_Mobilenumber": "رقم الهاتف",
 		"Register_activate_auth": "قم بتنشيط المصادقة الثنائية",
 		"Register_Accounttype": "نوع الحساب",
-		"Register_want_register": "أرغب في التسجيل في النشرة الإخبارية للصحة من Aimedis (اختياري).",
+		"Register_want_register": "أرغب في التسجيل في النشرة الإخبارية للصحة من AIS (اختياري).",
 		"Register_Clicking_box": "بالنقر فوق المربع أوافق على شروط الاستخدام الخاصة بنا وأقبل جمع البيانات ومعالجة البيانات واستخدام بياناتي الشخصية. المزيد في سياسة الخصوصية.",
 		"Register_clickingbox": "بالضغط فوق المربع أؤكد أنني طبيب أخصائي. يجب أن أقدم دليلاً على ترخيص الممارسة الخاص بي، والذي أقوم بتحميله الآن أو تقديمه لاحقًا. حتى ذلك الحين (تقديم الترخيص)، لا يمكنني التواصل مع المرضى.",
 		"Register_CREATE": "إنشاء حساب",
@@ -25,7 +25,7 @@
 		"Register_number": "1 رقم",
 		"Register_special": "1 علامة مميزة",
 		"recruitmentemp_content": "تعيين موظفين",
-		"Aimedis_Staff_Reg": "تسجل كموظف بـ Aimedis ",
+		"Aimedis_Staff_Reg": "تسجل كموظف بـ AIS ",
 		"YOUR_CONTACT_INFO": "معلومات الاتصال الخاصة بك",
 		"recEmp_Emailaddress": "البريد الإلكتروني",
 		"recEmp_FirstName": "الاسم الأول",
@@ -38,21 +38,21 @@
 		"recEmp_Empty_chec": "علامة اختيار فارغة للشروط أو الأحكام",
 		"Clicking_the_box": "بالنقر فوق المربع أوافق على شروط الاستخدام الخاصة بنا وأقبل جمع البيانات ومعالجة البيانات واستخدام بياناتي الشخصية. المزيد في سياسة الخصوصية.",
 		"Contact_permission": "إذن الاتصال",
-		"Please_select_all": "يرجى تحديد جميع الطرق التي تود معرفة الأخبار بها من Aimedis B.V.",
+		"Please_select_all": "يرجى تحديد جميع الطرق التي تود معرفة الأخبار بها من AIS B.V.",
 		"recEmp_Email": "البريد الإلكتروني",
 		"recEmp_DirectMail": "البريد المباشر",
 		"You_can_unsubscribe": "يُمكنك إلغاء الاشتراك في أي وقت بالضغط على الرابط في نهاية رسائل البريد الإلكتروني الخاصة بنا. للحصول على معلومات حول ممارسات الخصوصية، يرجى زيارة موقعنا الإلكتروني.",
 		"We_use_Mailchimp": "نحن نستخدم Mailchimp كمنصة تسويق لدينا. بالضغط أدناه للاشتراك، فإنك تقر بأنه سيتم نقل معلوماتك إلى Mailchimp للمعالجة.",
 		"more_about_Mailchimp": "اعرف المزيد حول سياسات الخصوصية في Mailchimp هنا.",
 		"recEmp_SUBSCRIBE": "اشترك",
-		"Aimedis_Staff_Recruitment": "تعيين موظفين Aimedis",
+		"Aimedis_Staff_Recruitment": "تعيين موظفين AIS",
 		"Staff_CONTACT_INFO": "معلومات الاتصال الخاصة بك",
 		"Staff_Company": "الشركة",
 		"Staff_INDUSTRY": "مجال عملك واحتياجات موظفينك",
 		"Staff_Indu": "مجال عملك",
 		"Staff_needs": "احتياجات موظفيك",
 		"Staff_addstaff": "+ اضافة موظفين",
-		"want_to_register": "أرغب في التسجيل في النشرة الإخبارية للصحة من Aimedis (اختياري).",
+		"want_to_register": "أرغب في التسجيل في النشرة الإخبارية للصحة من AIS (اختياري).",
 		"I_agree_to_our": "بالضغط فوق المربع أوافق على شروط الاستخدام الخاصة بنا وأقبل جمع البيانات ومعالجة البيانات واستخدام بياناتي الشخصية. المزيد في سياسة الخصوصية.",
 		"Staff_SENDREC": "ارسال استمارة التوظيف",
 		"profile": "الملف الشخصي",
@@ -177,7 +177,7 @@
 		"updated_success": "تم التحديث بنجاح",
 		"file_uploaded": "تم رفع الملف بنجاح",
 		"upload_id_card": "قم بتحميل صورة لبطاقة هويتك",
-		"by_clicking_accept_aimedis_term": "بالضغط فوق هذا، فإنك تقبل شروط Aimedis وسياسة الخصوصية الخاصة به",
+		"by_clicking_accept_aimedis_term": "بالضغط فوق هذا، فإنك تقبل شروط AIS وسياسة الخصوصية الخاصة به",
 		"attached_doc": "مستند مرفق",
 		"u_r_nvr_obligate_to_upload_doc": "لست ملزمًا مطلقًا بتحميل رخصتك أو أي إثبات آخر للهوية.",
 		"in_critical_enviroment_id": "في البيئة الخطيرة والحالات الحرجة، فإنك عندما تفعل هذا يجعل التعرف على البيانات ومقارنتها مع بيانات الرعاية الصحية الحالية أسهل بكثير. أيضًا، خصم خدمات الرعاية الصحية من شركة التأمين الخاصة بك أسهل بكثير بهذه الطريقة.",
@@ -204,7 +204,7 @@
 		"allergies": "الحساسية",
 		"health_issue": "المشاكل الصحية (السكر، ارتفاع ضغط الدم ...)",
 		"doc_and_statnderd_ques": "الطبيب والأسئلة النموذجية",
-		"doc_aimedis_private": "طبيب (Aimedis وخاص)",
+		"doc_aimedis_private": "طبيب (AIS وخاص)",
 		"how_u_feeling": "كيف تشعر",
 		"is_ur_temp_high_to_38": "هل درجة حرارتك أعلى من 38 درجة مئوية",
 		"which_symptoms_do_u_hav": "ما هي الأعراض التي لديك",
@@ -296,9 +296,9 @@
 		"deactivated": "معطل",
 		"srvc_not_updt_cannt_reach_srvr": "لم يتم تحديث الخدمة. لا يمكن الوصول إلى السيرفر",
 		"doc_around_clock": "دكتور على مدار الساعة",
-		"cntct_aimedis_medi_team_24_7": "اتصل بفريق Aimedis الطبي24/7 لطرح الأسئلة",
+		"cntct_aimedis_medi_team_24_7": "اتصل بفريق AIS الطبي24/7 لطرح الأسئلة",
 		"data_srvcs": "خدمات البيانات",
-		"stay_upto_date_orgnize_data": "ابق على اطلاع ودع Aimedis ينظم بياناتك الطبية",
+		"stay_upto_date_orgnize_data": "ابق على اطلاع ودع AIS ينظم بياناتك الطبية",
 		"available": "متوفر",
 		"activate": "تفعيل",
 		"secnd_openion": "رأي ثاني",
@@ -378,7 +378,7 @@
 		"welcome": "مرحبًا",
 		"ur_helthcare_on_blockchain": "منصة الرعاية الصحية الخاصة بك على Blockchain",
 		"we_hv_prpared_short_introductry": "لقد أعددنا مقطع فيديو تمهيديًا قصيرًا يلخص جميع الفوائد",
-		"u_get_from_aimedis": "ما تحصل عليه من خلال استخدامك لمنصة Aimedis.",
+		"u_get_from_aimedis": "ما تحصل عليه من خلال استخدامك لمنصة AIS.",
 		"entry_example": "مثال للإدخال",
 		"journal_entry": "إدخال دفتر",
 		"example": "مثال",
@@ -756,7 +756,7 @@
 		"insurance_num": "فارما / بحث / رقم تأمين",
 		"street_address": "عنوان الشارع",
 		"privacy_policy": "سياسة الخصوصية",
-		"aimedis_online_cour": "كورسات Aimedis الأونلاين",
+		"aimedis_online_cour": "كورسات AIS الأونلاين",
 		"tracker_self": "أجهزة التتبع وبيانات Iot",
 		"settings": "الإعدادات",
 		"organ_doner": "متبرع بالأعضاء",
@@ -769,7 +769,7 @@
 		"disable_2_factor": "تعطيل المصادقة الثنائية",
 		"enable_2_factor": "تمكين المصادقة الثنائية",
 		"appVersion": "إصدار التطبيق 3.0",
-		"aimedisInc": "Aimedis B.V.",
+		"aimedisInc": "AIS B.V.",
 		"do_want_disconn": "هل تريد قطع الاتصال؟",
 		"tracker_data": "جهاز التتبع & بيانات IoT",
 		"tracker_devices": "أجهزة التتبع",
@@ -818,7 +818,7 @@
 		"type_a_msg": "اكتب رسالة ..",
 		"back_to_screen": "العودة إلى صفحة تسجيل الدخول",
 		"verify_email": "يرجى التحقق من عنوان  بريدك الإلكتروني",
-		"aimedis_link": "إذا كان هناك حساب Aimedis متصل بـ",
+		"aimedis_link": "إذا كان هناك حساب AIS متصل بـ",
 		"email_reset": "البريد الإلكتروني، سوف نرسل تعليمات لإعادة تعيين كلمة المرور الخاصة بك.",
 		"we_sent_email": "لقد أرسلنا بريدًا إلكترونيًا للتحقق إلى",
 		"click_the_link": "اضغط فوق اللينك الموجود في البريد الإلكتروني لتبدأ!",
@@ -894,7 +894,7 @@
 		"not_now": "ليس الآن",
 		"reset_passwrd": "إعادة تعيين كلمة المرور",
 		"register_new_acc": "تسجيل حساب جديد",
-		"you_r_blocked": "أنت محظور. يُرجى الاتصال بفريق دعم Aimedis عبر contact@aimedis.com",
+		"you_r_blocked": "أنت محظور. يُرجى الاتصال بفريق دعم AIS عبر contact@aimedis.com",
 		"blocked": "محظور",
 		"turn_on": "تشغيل",
 		"login_suceess": "تم تسجيل الدخول بنجاح",
@@ -930,7 +930,7 @@
 		"pre_doc_found": "تم العثور على بيانات طبيبالروشتة",
 		"pre_doc_not_found": "لم يتم العثور على بيانات طبيب الروشتة",
 		"error_network_conn": "خطأ في اتصال الشبكة",
-		"select_aimedis_dr": "الرجاء تحديد طبيب Aimedis",
+		"select_aimedis_dr": "الرجاء تحديد طبيب AIS",
 		"Dr_added_to_fav_list": "تمت إضافة الطبيب إلى قائمة المفضلة",
 		"please_check_net_conn": "يرجى التحقق من اتصال الشبكة",
 		"rating_added_to_course": "تم إضافة التقييم للكورس",
@@ -949,7 +949,7 @@
 		"all_required": "كل البيانات مطلوبة",
 		"password_up": "تم تحديث كلمة المرور",
 		"select_lang": "اختر لغة",
-		"exit_amedis": "الخروج من Aimedis",
+		"exit_amedis": "الخروج من AIS",
 		"want_to_exit": "هل تريد الخروج؟",
 		"fcm_msg_arr": "وصلت رسالة FCM جديدة!",
 		"upload_a_photo": "قم بتحميل صورة لبطاقة تأمينك الصحي ",
@@ -1205,7 +1205,7 @@
 		"less_than_err":"يرجى تحميل الصور أقل من 6",
 		"err_file_formart": "النظام غير متوافق مع تنسيق الملف هذا",
 		"reallyWantDelete" : "هل تريد حقًا حذف حسابك؟",
-		"looseAllData" :"ستفقد جميع بياناتك ولن يتمكن أحد من الوصول إليها مرة أخرى! يتم أيضًا فقد المعلومات المخزنة داخل بلوكشين Aimedis إلى الأبد لأنك الوحيد الذي يمكنه رؤيتها.",
+		"looseAllData" :"ستفقد جميع بياناتك ولن يتمكن أحد من الوصول إليها مرة أخرى! يتم أيضًا فقد المعلومات المخزنة داخل بلوكشين AIS إلى الأبد لأنك الوحيد الذي يمكنه رؤيتها.",
 		"delete_your_account":"حذف حسابك",
       	"delete_account":"حذف الحساب",
 		"ConversationList" :"قائمة المحادثة",
@@ -1457,13 +1457,13 @@
 		"Pin": "Pin -",
 		"Taskstatus": "Task status:",
 		"Iamhere": "I am here :",
-		"AimedisInvoiceReport": "Aimedis Invoice Report",
+		"AimedisInvoiceReport": "AIS Invoice Report",
 		"ServiceList": "Service List",
 		"InvoiceData": "Invoice Data",
 		"Services:": "Services :",
 		"TotalAmount": "Total Amount",
 		"Created_at": "Created at",
-		"YourAimedisTeam": "Your Aimedis Team",
+		"YourAimedisTeam": "Your AIS Team",
 		"contactAimedisForQuery": "If you have any questions do not hesitate to contact us via the support chat or via contact@aimedis.com",
 		"NewInvoice": "+ New Invoice",
 		"Paid": "Paid",
