--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -5,14 +5,14 @@
 		"login_LOGIN_btn": "CONNEXION",
 		"login_an_account": "pas de compte ?",
 		"login_Registerhere": "Inscrivez-vous ici",
-		"Register_for_Aimedis": "S'inscrire à Aimedis",
+		"Register_for_Aimedis": "S'inscrire à AIS",
 		"Register_Name": "Nom",
 		"Register_email": "Adresse e-mail",
 		"Register_Password": "Mot de passe",
 		"Register_Mobilenumber": "Numéro de mobile",
 		"Register_activate_auth": "Activer l'authentification à 2 facteurs",
 		"Register_Accounttype": "Type de compte",
-		"Register_want_register": "Je souhaite m'inscrire à la lettre d'information sur la santé d'Aimedis (facultatif).",
+		"Register_want_register": "Je souhaite m'inscrire à la lettre d'information sur la santé d'AIS (facultatif).",
 		"Register_Clicking_box": "En cliquant sur la case, j'accepte nos conditions d'utilisation et j'accepte la collecte, le traitement et l'utilisation de mes données personnelles. Pour en savoir plus, consultez notre politique de confidentialité.",
 		"Register_clickingbox": "En cliquant sur la case, je confirme que je suis un professionnel de la santé. Je dois fournir une preuve de ma licence d'exercice, que je télécharge maintenant ou que je fournirai plus tard. Si je ne fournis pas cette preuve, je ne peux pas me connecter aux patients.",
 		"Register_CREATE": "CRÉER UN COMPTE",
@@ -25,7 +25,7 @@
 		"Register_number": "1 numéro",
 		"Register_special": "1 caractère spécial",
 		"recruitmentemp_content": "recruter des employés",
-		"Aimedis_Staff_Reg": "Registre du personnel Aimedis",
+		"Aimedis_Staff_Reg": "Registre du personnel AIS",
 		"YOUR_CONTACT_INFO": "VOS COORDONNÉES",
 		"recEmp_Emailaddress": "Adresse e-mail",
 		"recEmp_FirstName": "Prénom",
@@ -38,21 +38,21 @@
 		"recEmp_Empty_chec": "Cochez la case vide pour les termes ou conditions ",
 		"Clicking_the_box": "En cliquant sur la case, j'accepte nos conditions d'utilisation et j'accepte la collecte, le traitement et l'utilisation de mes données personnelles. Pour en savoir plus, consultez notre politique de confidentialité.",
 		"Contact_permission": "Autorisation de contact",
-		"Please_select_all": "Veuillez sélectionner toutes les façons dont vous souhaitez recevoir des informations de la part d'Aimedis B.V.",
+		"Please_select_all": "Veuillez sélectionner toutes les façons dont vous souhaitez recevoir des informations de la part d'AIS B.V.",
 		"recEmp_Email": "E-mail",
 		"recEmp_DirectMail": "Publipostage",
 		"You_can_unsubscribe": "Vous pouvez vous désabonner à tout moment en cliquant sur le lien en bas de nos e-mails. Pour plus d'informations sur nos pratiques en matière de protection de la vie privée, veuillez consulter notre site web.",
 		"We_use_Mailchimp": "Nous utilisons Mailchimp comme plateforme de marketing. En cliquant ci-dessous pour vous inscrire, vous reconnaissez que vos informations seront transférées à Mailchimp pour traitement.",
 		"more_about_Mailchimp": "Pour en savoir plus sur les pratiques de mailchimp en matière de protection de la vie privée, cliquez ici.",
 		"recEmp_SUBSCRIBE": "S'ABONNER",
-		"Aimedis_Staff_Recruitment": "Recrutement du personnel d'Aimedis",
+		"Aimedis_Staff_Recruitment": "Recrutement du personnel d'AIS",
 		"Staff_CONTACT_INFO": "VOS COORDONNÉES",
 		"Staff_Company": "Société",
 		"Staff_INDUSTRY": "VOS BESOINS EN MATIÈRE D'INDUSTRIE ET DE PERSONNEL",
 		"Staff_Indu": "Industrie",
 		"Staff_needs": "Besoins du personnel",
 		"Staff_addstaff": "+ ajouter du personnel",
-		"want_to_register": "Je souhaite m'inscrire à la lettre d'information sur la santé d'Aimedis (facultatif).",
+		"want_to_register": "Je souhaite m'inscrire à la lettre d'information sur la santé d'AIS (facultatif).",
 		"I_agree_to_our": "En cliquant sur la case, j'accepte nos conditions d'utilisation et j'accepte la collecte, le traitement et l'utilisation de mes données personnelles. En savoir plus sur notre politique de confidentialité.",
 		"Staff_SENDREC": "ENVOYER LE FORMULAIRE DE RECRUTEMENT",
 		"profile": "Profil",
@@ -142,7 +142,7 @@
 		"serch_by_name_id": "Recherche par nom ou par identifiant",
 		"add_to_trusted_doc": "Ajouter à Médecins de confiance",
 		"recmonded_doc": "Médecins recommandés",
-		"doc_who_part_of_aimedis": "Les médecins qui font partie de la plate-forme Aimedis.",
+		"doc_who_part_of_aimedis": "Les médecins qui font partie de la plate-forme AIS.",
 		"free_text": "Texte libre",
 		"forget_password": "Oublier le mot de passe",
 		"plz_enter_valid_email": "Veuillez entrer une adresse électronique valide",
@@ -177,7 +177,7 @@
 		"updated_success": "mis à jour avec succès",
 		"file_uploaded": "Le fichier a été téléchargé avec succès",
 		"upload_id_card": "Téléchargez une photo de votre carte d'identité",
-		"by_clicking_accept_aimedis_term": "En cliquant sur ce lien, vous acceptez les conditions d'Aimedis et sa politique de confidentialité",
+		"by_clicking_accept_aimedis_term": "En cliquant sur ce lien, vous acceptez les conditions d'AIS et sa politique de confidentialité",
 		"attached_doc": "Document ci-joint",
 		"u_r_nvr_obligate_to_upload_doc": "Vous n'êtes jamais obligé de télécharger votre licence ou toute autre preuve d'identité.",
 		"in_critical_enviroment_id": "Dans l'environnement critique, il facilite grandement l'identification et la comparaison avec les données existantes sur les soins d'assistance. La déduction des services de santé auprès de votre compagnie d'assurance est également beaucoup plus facile de cette manière.",
@@ -204,7 +204,7 @@
 		"allergies": "Allergies",
 		"health_issue": "Questions de santé (diabète, hypertension ...)",
 		"doc_and_statnderd_ques": "Médecin et questions standard",
-		"doc_aimedis_private": "Médecin (Aimedis & privé)",
+		"doc_aimedis_private": "Médecin (AIS & privé)",
 		"how_u_feeling": "Comment vous sentez-vous ?",
 		"is_ur_temp_high_to_38": "Votre température est-elle supérieure à 38 °C",
 		"which_symptoms_do_u_hav": "Quels sont les symptômes que vous présentez",
@@ -296,9 +296,9 @@
 		"deactivated": "désactivé",
 		"srvc_not_updt_cannt_reach_srvr": "Le service n'est pas mis à jour. Impossible d'accéder au serveur",
 		"doc_around_clock": "Doc 24 heures sur 24",
-		"cntct_aimedis_medi_team_24_7": "Contactez l'équipe médicale d'Aimedis 24 / 7 pour toute question",
+		"cntct_aimedis_medi_team_24_7": "Contactez l'équipe médicale d'AIS 24 / 7 pour toute question",
 		"data_srvcs": "Services de données",
-		"stay_upto_date_orgnize_data": "Restez à jour et laissez Aimedis organiser vos données médicales",
+		"stay_upto_date_orgnize_data": "Restez à jour et laissez AIS organiser vos données médicales",
 		"available": "Disponible",
 		"activate": "Activer",
 		"secnd_openion": "Deuxième avis",
@@ -378,7 +378,7 @@
 		"welcome": "Bienvenue",
 		"ur_helthcare_on_blockchain": "Votre plateforme de soins de santé sur la Blockchain",
 		"we_hv_prpared_short_introductry": "Nous avons préparé une courte vidéo d'introduction qui résume tous les avantages",
-		"u_get_from_aimedis": "que vous obtenez en utilisant la plate-forme Aimedis.",
+		"u_get_from_aimedis": "que vous obtenez en utilisant la plate-forme AIS.",
 		"entry_example": "Exemple de saisie",
 		"journal_entry": "Écriture de journal",
 		"example": "Exemple",
@@ -755,7 +755,7 @@
 		"insurance_num": "Numéro Pharma / Recherche / Assurance",
 		"street_address": "Adresse de la rue",
 		"privacy_policy": "Politique de confidentialité",
-		"aimedis_online_cour": "Cours en ligne Aimedis",
+		"aimedis_online_cour": "Cours en ligne AIS",
 		"tracker_self": "Trackers et données Iot",
 		"settings": "Paramètres",
 		"organ_doner": "Donneur d'organes",
@@ -768,7 +768,7 @@
 		"disable_2_factor": "Désactiver l'authentification à 2 facteurs",
 		"enable_2_factor": "Activer l'authentification à 2 facteurs",
 		"appVersion": "App version 3.0",
-		"aimedisInc": "Aimedis B.V.",
+		"aimedisInc": "AIS B.V.",
 		"do_want_disconn": "Voulez-vous déconnecter",
 		"tracker_data": "Données de Tracker & IoT",
 		"tracker_devices": "Traqueurs et dispositifs",
@@ -817,7 +817,7 @@
 		"type_a_msg": "Saisissez un message..",
 		"back_to_screen": "Retour à l'écran de connexion",
 		"verify_email": "Veuillez vérifier votre adresse électronique",
-		"aimedis_link": "S'il existe un compte Aimedis lié à",
+		"aimedis_link": "S'il existe un compte AIS lié à",
 		"email_reset": "par e-mail, nous vous enverrons les instructions pour réinitialiser votre mot de passe.",
 		"we_sent_email": "Nous avons envoyé un courriel de vérification à nt a verification email to ",
 		"click_the_link": ". Cliquez sur le lien dans le courriel pour commencer !!",
@@ -892,7 +892,7 @@
 		"not_now": "Pas maintenant",
 		"reset_passwrd": "Réinitialisation du mot de passe",
 		"register_new_acc": "Enregistrer un nouveau compte",
-		"you_r_blocked": "Les vôtres sont bloquées. Veuillez contacter l'équipe de soutien Aimedis via contact@aimedis.com",
+		"you_r_blocked": "Les vôtres sont bloquées. Veuillez contacter l'équipe de soutien AIS via contact@aimedis.com",
 		"turn_on": "Mettre en marche",
 		"login_suceess": "Connexion réussie",
 		"select_acc_type": "Sélectionnez le type de compte",
@@ -927,7 +927,7 @@
 		"pre_doc_found": "Trouver des données sur les médecins prescripteurs",
 		"pre_doc_not_found": "Données sur les médecins prescripteurs non trouvées",
 		"error_network_conn": "erreur de connexion au réseau",
-		"select_aimedis_dr": "Veuillez sélectionner le médecin Aimedis",
+		"select_aimedis_dr": "Veuillez sélectionner le médecin AIS",
 		"Dr_added_to_fav_list": "Médecin ajouté à la liste des favoris",
 		"please_check_net_conn": "Veuillez vérifier la connexion au réseau",
 		"rating_added_to_course": "La notation est ajoutée au cours",
@@ -946,7 +946,7 @@
 		"all_required": "Tous les champs sont obligatoires",
 		"password_up": "Mot de passe mis à jour",
 		"select_lang": "Sélectionnez une langue",
-		"exit_amedis": "Sortie d'Aimedis",
+		"exit_amedis": "Sortie d'AIS",
 		"want_to_exit": "Vous voulez sortir ?",
 		"fcm_msg_arr": "Un nouveau message de la FCM est arrivé!",
 		"upload_a_photo": "Téléchargez une photo de votre carte d'assurance maladie",
@@ -1205,7 +1205,7 @@
 		"less_than_err": "Veuillez télécharger des images inférieures à 6",
 		"err_file_formart": "Le système n'est pas pris en charge par ce format de fichier",
 		"reallyWantDelete": "Voulez-vous vraiment supprimer votre compte ?",
-		"looseAllData": "Vous perdrez toutes vos données et plus personne ne pourra plus y accéder ! De plus, les informations stockées dans la blockchain Aimedis sont perdues à jamais car vous êtes le seul à pouvoir les voir.",
+		"looseAllData": "Vous perdrez toutes vos données et plus personne ne pourra plus y accéder ! De plus, les informations stockées dans la blockchain AIS sont perdues à jamais car vous êtes le seul à pouvoir les voir.",
 		"delete_your_account": "Supprimer votre compte",
 		"delete_account": "Supprimer le compte",
 		"ConversationList": "Liste des conversations",
@@ -1458,13 +1458,13 @@
 		"Pin": "Pin -",
 		"Taskstatus": "Task status:",
 		"Iamhere": "I am here :",
-		"AimedisInvoiceReport": "Aimedis Invoice Report",
+		"AimedisInvoiceReport": "AIS Invoice Report",
 		"ServiceList": "Service List",
 		"InvoiceData": "Invoice Data",
 		"Services:": "Services :",
 		"TotalAmount": "Total Amount",
 		"Created_at": "Created at",
-		"YourAimedisTeam": "Your Aimedis Team",
+		"YourAimedisTeam": "Your AIS Team",
 		"contactAimedisForQuery": "If you have any questions do not hesitate to contact us via the support chat or via contact@aimedis.com",
 		"NewInvoice": "+ New Invoice",
 		"Paid": "Paid",
