--- a/src/translations/tr.json
+++ b/src/translations/tr.json
@@ -5,14 +5,14 @@
 		"login_LOGIN_btn": "GIRIŞ",
 		"login_an_account": "Hesabın yokmu?",
 		"login_Registerhere": "Kayıt ol",
-		"Register_for_Aimedis": "Aimedis için kayıt ol",
+		"Register_for_Aimedis": "AIS için kayıt ol",
 		"Register_Name": "Isim",
 		"Register_email": "E-posta adresi",
 		"Register_Password": "Şifre",
 		"Register_Mobilenumber": "Cep telefonu numarası",
 		"Register_activate_auth": "İki faktörlü kimlik doğrulamasıni baslat",
 		"Register_Accounttype": "Hesap tipi",
-		"Register_want_register": "Aimedis sağlık bültenine kayıt olmak istiyorum (opsiyonel).",
+		"Register_want_register": "AIS sağlık bültenine kayıt olmak istiyorum (opsiyonel).",
 		"Register_Clicking_box": "Kutuya basarak koşullarınızı onaylıyorum ve bilgilerin toplanmasına, bilgilerin işlenmesine ve kişisel verilerimin kullanılmalarına müsade ediyorum. Daha fazla bilgi veri koruma bilgilerinde mevcuttur.",
 		"Register_clickingbox": "Kutuya basarak sağlık uzmanı olduğumu onaylıyorum. Bu meslekte çalışabilceğime dair bir ispat temin etmem gerek. O ispatı ya şimdi ya da sonra yükleyebilirim. Bu delili sunmadan hastalarla bağlantıya.",
 		"Register_CREATE": "HESAP AÇ",
@@ -25,7 +25,7 @@
 		"Register_number": "1 numara",
 		"Register_special": "1 özel karakter",
 		"recruitmentemp_content": "Yeni yetişmekte olan personel",
-		"Aimedis_Staff_Reg": "Aimedis Personel Kayıtı",
+		"Aimedis_Staff_Reg": "AIS Personel Kayıtı",
 		"YOUR_CONTACT_INFO": "ULAŞIM BILGILERIN",
 		"recEmp_Emailaddress": "E-posta adresi",
 		"recEmp_FirstName": "Ön ad",
@@ -38,21 +38,21 @@
 		"recEmp_Empty_chec": "Koşullar & Poliçeler için boş kontrol işeretlemesi",
 		"Clicking_the_box": "Kutuya basarak koşullarınızı onaylıyorum ve bilgilerin toplanmasına, bilgilerin işlenmesine ve kişisel verilerimin kullanılmalarına müsade ediyorum. Daha fazla bilgi veri koruma bilgilerinde mevcuttur.",
 		"Contact_permission": "Irtibata geçme müsaadesi",
-		"Please_select_all": "Hangi yollardan Aimedis B.V. den haber almak istediğini lütfen seç",
+		"Please_select_all": "Hangi yollardan AIS B.V. den haber almak istediğini lütfen seç",
 		"recEmp_Email": "Emay",
 		"recEmp_DirectMail": "Direkt emay",
 		"You_can_unsubscribe": "Kayıdını istediğin zaman emaylarındaki dip siradaki bağlantıya basarak silebilirsin. Veri koruma önlemlerimiz hakkında bilgi almak istiyorsan lütfen sitemizi ziyaret et.",
 		"We_use_Mailchimp": "Pazarlama platformumuz olarak Mailchimp’i kullanıyoruz. Kayıt olmak için asağı bastığında bilgilerinin işlenmesi için Mailchimpe gönderildiklerini kabul ve tensip ediyorsun.",
 		"more_about_Mailchimp": "Mailchimpin veri koruma önlemleri hakkında burada bilgi al.",
 		"recEmp_SUBSCRIBE": "ABONE OL",
-		"Aimedis_Staff_Recruitment": "Aimedis Personel Işe Alma",
+		"Aimedis_Staff_Recruitment": "AIS Personel Işe Alma",
 		"Staff_CONTACT_INFO": "ULAŞIM BILGILERIN",
 		"Staff_Company": "Şirket",
 		"Staff_INDUSTRY": "ENDÜSTRININ & PERSONELIN IHTIYAÇLARI",
 		"Staff_Indu": "Endüstri",
 		"Staff_needs": "Personel ihtiyaçları",
 		"Staff_addstaff": "+ personel ekle",
-		"want_to_register": "Aimedis sağlık bültenine kayıt olmak istiyorum (opsiyonel).",
+		"want_to_register": "AIS sağlık bültenine kayıt olmak istiyorum (opsiyonel).",
 		"I_agree_to_our": "Kutuya basarak koşullarınızı onaylıyorum ve bilgilerin toplanmasına, bilgilerin işlenmesine ve kişisel verilerimin kullanılmalarına müsade ediyorum. Daha fazla bilgi veri koruma bilgilerinde mevcuttur.",
 		"Staff_SENDREC": "IŞE ALMA FORMUNU GÖNDER",
 		"profile": "Profil",
@@ -142,7 +142,7 @@
 		"serch_by_name_id": "Isime veya kimliğe göre ara",
 		"add_to_trusted_doc": "Güvenilir doktorlara ekle",
 		"recmonded_doc": "Tavsiye edilen doktorlar",
-		"doc_who_part_of_aimedis": "Aimedis platformun bir parçası olan doktorlar.",
+		"doc_who_part_of_aimedis": "AIS platformun bir parçası olan doktorlar.",
 		"free_text": "Boş yazı",
 		"forget_password": "Şifremi unuttum",
 		"plz_enter_valid_email": "Lütfen geçerli bir emay ver",
@@ -177,7 +177,7 @@
 		"updated_success": "başarılı bir şekilde güncellendi",
 		"file_uploaded": "Dosya başarılı bir şekilde yüklendi",
 		"upload_id_card": "Kimlik kartının resmini yükle",
-		"by_clicking_accept_aimedis_term": "Buraya basarak Aimedis koşullarını ve veri koruma bildirisini onaylıyorsun",
+		"by_clicking_accept_aimedis_term": "Buraya basarak AIS koşullarını ve veri koruma bildirisini onaylıyorsun",
 		"attached_doc": "Eklenmiş doküman",
 		"u_r_nvr_obligate_to_upload_doc": "Hiç bir zaman lisansını veya kimliğine dair başka kanıtları yüklemek zorunda değilsin.",
 		"in_critical_enviroment_id": "Bunu eğer yaparsan, o zaman bu zor şartlar altında kimlik tespiti ve karşılaştırma mevcut olan sağlık kayıtlarınla çok daha kolaydır. Ayrıca böylelikle verilen sağlık hizmetlerin sağlık sigortanla hesaplanması çok daha kolaydır.",
@@ -204,7 +204,7 @@
 		"allergies": "Allerjiler",
 		"health_issue": "Sağlık sorunları (Diyabet, Yüksek tansiyon...)",
 		"doc_and_statnderd_ques": "Doktor ve standart sorular",
-		"doc_aimedis_private": "Doktor (Aimedis & Özel)",
+		"doc_aimedis_private": "Doktor (AIS & Özel)",
 		"how_u_feeling": "Kendini nasıl hissediyorsun",
 		"is_ur_temp_high_to_38": "Vücut sıcaklığın 38 °C‘nin üzerinde mi",
 		"which_symptoms_do_u_hav": "Hangi belirtilerin var",
@@ -297,9 +297,9 @@
 		"deactivated": "Kapalı",
 		"srvc_not_updt_cannt_reach_srvr": "Hizmet güncellenmemiştir. Servere ulaşılmıyor",
 		"doc_around_clock": "Aralıksız Doktor Hizmeti",
-		"cntct_aimedis_medi_team_24_7": "Soruların için Aimedis tıp ekibine 7 / 24",
+		"cntct_aimedis_medi_team_24_7": "Soruların için AIS tıp ekibine 7 / 24",
 		"data_srvcs": "Data Servisi",
-		"stay_upto_date_orgnize_data": "Bütün yeniliklerden haberin olsun ve Aimedisin tıp bilgilerini organize etmesine izin ver ",
+		"stay_upto_date_orgnize_data": "Bütün yeniliklerden haberin olsun ve AIS in tıp bilgilerini organize etmesine izin ver ",
 		"available": "Müsait",
 		"activate": "Aktive et",
 		"secnd_openion": "Ikinci fikir",
@@ -379,7 +379,7 @@
 		"welcome": "Hoş geldin",
 		"ur_helthcare_on_blockchain": "Blok zinciri bazlı sağlık platformun",
 		"we_hv_prpared_short_introductry": "Tüm avantajları toplayan kısa bir tanıtım videosu hazırladık",
-		"u_get_from_aimedis": "Aimedis platformunu kullanmaktan elde ettiğin.",
+		"u_get_from_aimedis": "AIS platformunu kullanmaktan elde ettiğin.",
 		"entry_example": "Örneği tuşla",
 		"journal_entry": "Günlüğe giriş",
 		"example": "Örnek",
@@ -757,7 +757,7 @@
 		"insurance_num": "Eczane / Araştırma / Sigorta numarası",
 		"street_address": "Sokak adresi",
 		"privacy_policy": "Gizlilik ilkesi",
-		"aimedis_online_cour": "Aimedis online kurslar",
+		"aimedis_online_cour": "AIS online kurslar",
 		"tracker_self": "Gözleme sistemi & Iot data",
 		"settings": "Seçenekler",
 		"organ_doner": "Organ bağışlayan",
@@ -770,7 +770,7 @@
 		"disable_2_factor": "İki faktörlü kimlik doğrulamasını kapat",
 		"enable_2_factor": "İki faktörlü kimlik doğrulamasını aç",
 		"appVersion": "App versiyon 3.0",
-		"aimedisInc": "Aimedis B.V.",
+		"aimedisInc": "AIS B.V.",
 		"do_want_disconn": "Bağlantıyı bitirmek istiyormusun",
 		"tracker_data": "Gözleme sistemi & IoT data",
 		"tracker_devices": "Gözleme sistemi & cihazlar",
@@ -819,7 +819,7 @@
 		"type_a_msg": "Mesaj yaz..",
 		"back_to_screen": "Giriş sayfasına geri git",
 		"verify_email": "Lütfen E-posta adresini onayla",
-		"aimedis_link": "Eğer bağlı bir Aimedis hesabı varsa",
+		"aimedis_link": "Eğer bağlı bir AIS hesabı varsa",
 		"email_reset": "E-posta ile bazı talimatlar göndereceğiz şifreni yeniden ayarlaman için.",
 		"we_sent_email": "Onaylama emayi gönderdik ",
 		"click_the_link": "Başlamak için emaydeki bağlantıyı tikla!",
@@ -895,7 +895,7 @@
 		"not_now": "Şimdi değil",
 		"reset_passwrd": "Şifreni geri al",
 		"register_new_acc": "Yeni hesap oluştur",
-		"you_r_blocked": "Bloke edildin. Lütfen Aimedis Destek ekibi ile contact@aimedis.com üzerinden bağlantıya geç",
+		"you_r_blocked": "Bloke edildin. Lütfen AIS Destek ekibi ile contact@aimedis.com üzerinden bağlantıya geç",
 		"blocked": "Bloke edilmiş",
 		"turn_on": "Aç",
 		"login_suceess": "Giriş başarılı",
@@ -931,7 +931,7 @@
 		"pre_doc_found": "Doktor reçete bilgisi bulundu",
 		"pre_doc_not_found": "Doktor reçete bilgisi bulunamadı",
 		"error_network_conn": "Network bağlantısında hata",
-		"select_aimedis_dr": "Lütfen Aimedis doktoru seç",
+		"select_aimedis_dr": "Lütfen AIS doktoru seç",
 		"Dr_added_to_fav_list": "Doktor favori listesine eklendi",
 		"please_check_net_conn": "Lütfen network bağlantısını kontrol et",
 		"rating_added_to_course": "Değerlendirme kursa eklendi",
@@ -950,7 +950,7 @@
 		"all_required": "Bütün boşluklar dolacak",
 		"password_up": "Şifre güncellendi",
 		"select_lang": "Dil seç",
-		"exit_amedis": "Aimedis’den çık",
+		"exit_amedis": "AIS’den çık",
 		"want_to_exit": "Çıkmak mı istiyorsun?",
 		"fcm_msg_arr": "Yeni bir FCM mesajı geldi!",
 		"upload_a_photo": "Sağlık sigorta kartın resmini yükle",
@@ -1096,7 +1096,7 @@
 		"plz_enter": "Lütfen hastanın emayini veya kimliğini yaz",
 		"patient_data_rqust": "Hastanın bilgi talebi",
 		"email_or_p_id": "Emay veya hasta kimliği",
-		"invite_dr_to_aimedis": "Aimedise doktorları davet et",
+		"invite_dr_to_aimedis": "AISe doktorları davet et",
 		"emergency_access": "Acil giriş",
 		"invalid": "Geçerli değil, lütfen geçerli bir E-posta adresi tuşla",
 		"plz_enter_email": "Lütfen E-posta adresini yaz",
@@ -1205,7 +1205,7 @@
 		"email_rcv_update_reciept": "Güncellemeleri ve makbuzları alacağınız e-posta",
 		"upload_license_is": "Yüklenen lisans",
 		"reallyWantDelete": "Hesabınızı gerçekten silmek istiyor musunuz?",
-		"looseAllData": "Tüm verilerinizi kaybedeceksiniz ve bir daha hiç kimse ona erişemeyecek! Ayrıca Aimedis blok zincirinde saklanan bilgiler, onu görebilecek tek kişi siz olduğunuz için sonsuza kadar kaybolur.",
+		"looseAllData": "Tüm verilerinizi kaybedeceksiniz ve bir daha hiç kimse ona erişemeyecek! Ayrıca AIS blok zincirinde saklanan bilgiler, onu görebilecek tek kişi siz olduğunuz için sonsuza kadar kaybolur.",
 		"delete_your_account": "Hesabını sil",
 		"delete_account": "Hesabı sil",
 		"ConversationList": "konuşma listesi",
@@ -1457,13 +1457,13 @@
 		"Pin": "Pin -",
 		"Taskstatus": "Task status:",
 		"Iamhere": "I am here :",
-		"AimedisInvoiceReport": "Aimedis Invoice Report",
+		"AimedisInvoiceReport": "AIS Invoice Report",
 		"ServiceList": "Service List",
 		"InvoiceData": "Invoice Data",
 		"Services:": "Services :",
 		"TotalAmount": "Total Amount",
 		"Created_at": "Created at",
-		"YourAimedisTeam": "Your Aimedis Team",
+		"YourAimedisTeam": "Your AIS Team",
 		"contactAimedisForQuery": "If you have any questions do not hesitate to contact us via the support chat or via contact@aimedis.com",
 		"NewInvoice": "+ New Invoice",
 		"Paid": "Paid",
