--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -5,14 +5,14 @@
 		"login_LOGIN_btn": "INICIAR SESIÓN",
 		"login_an_account": "¿no tiene una cuenta?",
 		"login_Registerhere": "Regístrese aquí",
-		"Register_for_Aimedis": "Registrarse en Aimedis V2",
+		"Register_for_Aimedis": "Registrarse en AIS V2",
 		"Register_Name": "Nombre",
 		"Register_email": "Dirección de correo electrónico",
 		"Register_Password": "Contraseña",
 		"Register_Mobilenumber": "Número de teléfono móvil",
 		"Register_activate_auth": "Activar autenticación de 2 factores",
 		"Register_Accounttype": "Tipo de cuenta",
-		"Register_want_register": "Deseo registrarme en el boletín de salud de Aimedis (opcional).",
+		"Register_want_register": "Deseo registrarme en el boletín de salud de AIS (opcional).",
 		"Register_Clicking_box": "Al hacer clic en la casilla, acepto los términos de uso, la recopilación de datos, el procesamiento de datos y el uso de mis datos personales. Obtenga más información en nuestra política de privacidad.",
 		"Register_clickingbox": "Al hacer clic en la casilla, confirmo que soy un profesional médico. Tengo que proporcionar una prueba de mi licencia de práctica, la cual subo ahora o más tarde. Antes de proporcionar esa prueba, no puedo contactar con los pacientes.",
 		"Register_CREATE": "CREAR CUENTA",
@@ -25,7 +25,7 @@
 		"Register_number": "1 número",
 		"Register_special": "1 carácter especial",
 		"recruitmentemp_content": "reclutamiento de empleados",
-		"Aimedis_Staff_Reg": "Registro de Personal de Aimedis",
+		"Aimedis_Staff_Reg": "Registro de Personal de AIS",
 		"YOUR_CONTACT_INFO": "SU INFORMACIÓN DE CONTACTO",
 		"recEmp_Emailaddress": "Dirección de Correo Electrónico",
 		"recEmp_FirstName": "Nombre",
@@ -38,21 +38,21 @@
 		"recEmp_Empty_chec": "Marca de verificación vacía para Términos o Política",
 		"Clicking_the_box": "Al hacer clic en la casilla acepto Los términos de uso, la recopilación de datos, el procesamiento de datos y el uso de mis datos personales. Obtenga más información en nuestra Política de Privacidad.",
 		"Contact_permission": "Permiso de contacto",
-		"Please_select_all": "Por favor, seleccione todas las formas en que le gustaría recibir noticias de Aimedis B.V.",
+		"Please_select_all": "Por favor, seleccione todas las formas en que le gustaría recibir noticias de AIS B.V.",
 		"recEmp_Email": "Correo Electrónico",
 		"recEmp_DirectMail": "Correo Directo",
 		"You_can_unsubscribe": "Puede darse de baja en cualquier momento haciendo clic en el enlace en el pie de página a nuestros correos electrónicos. Para obtener información sobre nuestras prácticas de privacidad, por favor visite nuestro sitio web.",
 		"We_use_Mailchimp": "Usamos Mailchimp como nuestra plataforma de marketing. Al hacer clic a continuación para suscribirse, acepta que su información se transfiera a Mailchimp para su procesamiento",
 		"more_about_Mailchimp": "Obtenga más información sobre las prácticas de privacidad de Mailchimp aquí",
 		"recEmp_SUBSCRIBE": "SUBSCRIBIRSE",
-		"Aimedis_Staff_Recruitment": "Reclutamiento de personal de Aimedis",
+		"Aimedis_Staff_Recruitment": "Reclutamiento de personal de AIS",
 		"Staff_CONTACT_INFO": "SU INFORMACIÓN DE CONTACTO",
 		"Staff_Company": "Compañía",
 		"Staff_INDUSTRY": "SU SECTOR Y NECESIDADES DE PERSONAL",
 		"Staff_Indu": "Industria",
 		"Staff_needs": "Necesidades de personal",
 		"Staff_addstaff": "+ agregar personal",
-		"want_to_register": "Quiero registrarme al boletín de salud de Aimedis (opcional).",
+		"want_to_register": "Quiero registrarme al boletín de salud de AIS (opcional).",
 		"I_agree_to_our": "Al hacer clic en la casilla acepto Los términos de uso, la recopilación de datos, el procesamiento de datos y el uso de mis datos personales. Obtenga más información en nuestra Política de Privacidad.",
 		"Staff_SENDREC": "ENVIAR FORMULARIO DE RECLUTAMIENTO",
 		"profile": "Perfil",
@@ -141,7 +141,7 @@
 		"serch_by_name_id": "Buscar por nombre o ID",
 		"add_to_trusted_doc": "Agregar a Médicos de Confianza",
 		"recmonded_doc": "Médicos Recomendados",
-		"doc_who_part_of_aimedis": "Médicos que forman parte de la plataforma Aimedis.",
+		"doc_who_part_of_aimedis": "Médicos que forman parte de la plataforma AIS.",
 		"free_text": "Texto Libre",
 		"plz_enter_valid_email": "Por favor, ingrese un correo electrónico válido",
 		"format_updated": "El formato es actualizado",
@@ -175,7 +175,7 @@
 		"updated_success": "actualizado correctamente",
 		"file_uploaded": "El archivo se cargó correctamente",
 		"upload_id_card": "Cargue una foto de su Tarjeta de Identificación",
-		"by_clicking_accept_aimedis_term": "Al hacer clic aquí, acepta los términos de Aimeidis y su política de privacidad.",
+		"by_clicking_accept_aimedis_term": "Al hacer clic aquí, acepta los términos de AIS y su política de privacidad.",
 		"attached_doc": "Documento Adjunto",
 		"u_r_nvr_obligate_to_upload_doc": "Nunca está obligado a cargar su licencia o cualquier otra prueba de identidad.",
 		"in_critical_enviroment_id": "En el entorno crítico, facilita mucho la identificación y comparación únicas con los datos de asistencia sanitaria existentes. Además, la deducción de los servicios de salud con su compañía de seguros es mucho más fácil de esa manera.",
@@ -202,7 +202,7 @@
 		"allergies": "Alergias",
 		"health_issue": "Problemas de salud (Diabetes, Hipertensión ...)",
 		"doc_and_statnderd_ques": "Preguntas estándar al médico",
-		"doc_aimedis_private": "Médico (Aimedis y Privado)",
+		"doc_aimedis_private": "Médico (AIS y Privado)",
 		"how_u_feeling": "Como se siente",
 		"is_ur_temp_high_to_38": "¿Su temperatura es superior a 38°C?",
 		"which_symptoms_do_u_hav": "¿Qué síntomas tiene?",
@@ -294,9 +294,9 @@
 		"deactivated": "desactivado",
 		"srvc_not_updt_cannt_reach_srvr": "El servicio no está actualizado. No se puede acceder al servidor",
 		"doc_around_clock": "Doc de 24 horas",
-		"cntct_aimedis_medi_team_24_7": "Comuníquese con el equipo médico de Aimedis 24/7 para sus preguntas",
+		"cntct_aimedis_medi_team_24_7": "Comuníquese con el equipo médico de AIS 24/7 para sus preguntas",
 		"data_srvcs": "Servicios de Datos",
-		"stay_upto_date_orgnize_data": "Manténgase actualizado y deje que Aimedis organice sus datos médicos",
+		"stay_upto_date_orgnize_data": "Manténgase actualizado y deje que AIS organice sus datos médicos",
 		"available": "Disponible",
 		"activate": "Activar",
 		"secnd_openion": "Segunda Opinión",
@@ -376,7 +376,7 @@
 		"welcome": "Bienvenido",
 		"ur_helthcare_on_blockchain": "Su plataforma de atención médica en Blockchain",
 		"we_hv_prpared_short_introductry": "Hemos preparado un breve video introductorio que resume todos los beneficios",
-		"u_get_from_aimedis": "que obtiene al usar la plataforma Aimedis.",
+		"u_get_from_aimedis": "que obtiene al usar la plataforma AIS.",
 		"entry_example": "Ejemplo de entrada",
 		"journal_entry": "Entrada de diario",
 		"example": "Ejemplo",
@@ -753,7 +753,7 @@
 		"insurance_num": "Número de farmacia / investigación / seguro",
 		"street_address": "Dirección",
 		"privacy_policy": "Políticas de Privacidad",
-		"aimedis_online_cour": "Cursos en Línea de Aimedis",
+		"aimedis_online_cour": "Cursos en Línea de AIS",
 		"tracker_self": "Rastreadores y Datos Personales",
 		"settings": "Ajustes",
 		"organ_doner": "Donante de Órganos",
@@ -766,7 +766,7 @@
 		"disable_2_factor": "Deshabilitar la autenticación de 2 factores",
 		"enable_2_factor": "Habilitar la autenticación de 2 factores",
 		"appVersion": "App version 1.0",
-		"aimedisInc": "Aimedis Inc.",
+		"aimedisInc": "AIS Inc.",
 		"do_want_disconn": "¿Desea desconectarse?",
 		"tracker_data": "Rastreador y Datos Personales",
 		"tracker_devices": "Rastreador y Dispositivos",
@@ -815,7 +815,7 @@
 		"type_a_msg": "Escriba una mensaje...",
 		"back_to_screen": "Volver a la pantalla de inicio de sesión",
 		"verify_email": "Verifique su \ndirección de correo electrónico",
-		"aimedis_link": "Si hay una cuenta de Aimedis vinculada a\n",
+		"aimedis_link": "Si hay una cuenta de AIS vinculada a\n",
 		"email_reset": "correo electrónico, le enviaremos \ninstrucciones para restablecer su contraseña.",
 		"we_sent_email": "Enviamos un correo electrónico de verificación a\n",
 		"click_the_link": ". Haga clic en el enlace del\n correo electrónico para comenzar.",
@@ -892,7 +892,7 @@
 		"not_now": "Ahora No",
 		"reset_passwrd": "Restablecer Contraseña",
 		"register_new_acc": "Registrar cuenta nueva",
-		"you_r_blocked": "Está bloqueado. Por favor conéctese al equipo de Aimedis",
+		"you_r_blocked": "Está bloqueado. Por favor conéctese al equipo de AIS",
 		"blocked": "¡Bloqueado!",
 		"turn_on": "Conectar",
 		"login_suceess": "Inicio de Sesión Exitoso",
@@ -929,7 +929,7 @@
 		"pre_doc_found": "Se encontraron datos del médico de hizo la prescripción",
 		"pre_doc_not_found": "No se encontraron datos del médico de hizo la prescripción",
 		"error_network_conn": "error en la conexión de red",
-		"select_aimedis_dr": "Por favor, seleccione un Médico de Aimedis .",
+		"select_aimedis_dr": "Por favor, seleccione un Médico de AIS .",
 		"Dr_added_to_fav_list": "Médico agregado a la lista de favoritos.",
 		"please_check_net_conn": "Por favor, compruebe la conexión de red",
 		"rating_added_to_course": "Calificación agregada al curso.",
@@ -948,7 +948,7 @@
 		"all_required": "Todos los campos son obligatorios.",
 		"password_up": "Contraseña actualiza",
 		"select_lang": "Seleccione el idioma",
-		"exit_amedis": "Salir de Aimedis",
+		"exit_amedis": "Salir de AIS",
 		"want_to_exit": "¿Desea salir?",
 		"fcm_msg_arr": "¡Llegó un nuevo mensaje de FCM!",
 		"upload_a_photo": "Cargue una foto de su tarjeta de seguro médico",
@@ -1100,7 +1100,7 @@
 		"plz_enter": "Ingrese el correo electrónico o identificación del paciente",
 		"patient_data_rqust": "Solicitud de datos del paciente",
 		"email_or_p_id": "Correo electrónico o identificación del paciente",
-		"invite_dr_to_aimedis": "Invitar a los médicos a Aimedis",
+		"invite_dr_to_aimedis": "Invitar a los médicos a AIS",
 		"emergency_access": "Acceso de emergencia",
 		"invalid": "inválido, ingrese un correo electrónico válido",
 		"plz_enter_email": "Por favor ingrese correo electrónico",
@@ -1205,7 +1205,7 @@
 		"less_than_err": "Sube imágenes de menos de 6",
 		"err_file_formart": "El sistema no es compatible con este formato de archivo",
 		"reallyWantDelete": "¿Realmente desea eliminar su cuenta?",
-		"looseAllData": "Вы потеряете все свои данные, и никто больше не сможет получить к ним доступ! Кроме того, информация, хранящаяся в блокчейне Aimedis, теряется навсегда, поскольку вы единственный, кто может ее увидеть.",
+		"looseAllData": "Вы потеряете все свои данные, и никто больше не сможет получить к ним доступ! Кроме того, информация, хранящаяся в блокчейне AIS, теряется навсегда, поскольку вы единственный, кто может ее увидеть.",
 		"delete_your_account": "Eliminar su cuenta",
 		"delete_account": "Borrar cuenta",
 		"ConversationList": "Lista de conversaciones",
@@ -1457,13 +1457,13 @@
 		"Pin": "Pin -",
 		"Taskstatus": "Task status:",
 		"Iamhere": "I am here :",
-		"AimedisInvoiceReport": "Aimedis Invoice Report",
+		"AimedisInvoiceReport": "AIS Invoice Report",
 		"ServiceList": "Service List",
 		"InvoiceData": "Invoice Data",
 		"Services:": "Services :",
 		"TotalAmount": "Total Amount",
 		"Created_at": "Created at",
-		"YourAimedisTeam": "Your Aimedis Team",
+		"YourAimedisTeam": "Your AIS Team",
 		"contactAimedisForQuery": "If you have any questions do not hesitate to contact us via the support chat or via contact@aimedis.com",
 		"NewInvoice": "+ New Invoice",
 		"Paid": "Paid",
